# FLITS

./: .gitignore  ANALYSIS_INVENTORY.md  ENVIRONMENT_SETUP.md  FLITS-Complete-Agent-Configuration-Guide.md  LICENSE  ONBOARDING_STATUS_REPORT.md  Pradeep2025.txt  README.md  REFACTORING_PLAN.md  SCATTERING_BROADENING_INTEGRATION.md  SCINTILLATION_PIPELINE_TECHNICAL_REPORT.md  audit_global_final.py  audit_robust_v2.py  bursts 2.yaml  bursts.yaml  check_all_trends.py  check_chime_orientation.py  check_detailed.py  crossmatch_paper.tex  debug_freq_logic.py  debug_imports.py  debug_orientation.py  debug_scattering 2.py  debug_wilhelm.py  debug_wilhelm_final.py  debug_wilhelm_v2.py  demo_batch 2.py  diagnostic_scattering 2.py  draft.ipynb  environment.yml  plot_dedispersed_scattered 2.py  plot_dedispersed_scattered.py  pyproject.toml  requirements.txt  simulate_scattered_pulse.py  standardize_chime.py  standardize_final.py  test_vizier_engine.py  verify_patches.py  verify_pipeline.py  (+3 more)
.archive/: FLITS-repo-refinement.md  README.md  REFACTORING_SUMMARY.md
.deprecated/: debug_wilhelm_centroid.py  debug_wilhelm_numeric.py  debug_wilhelm_v3.py  generate_casey_diagnostic.py  plot_debug_vis.py  plot_diagnostic_example.py  verify_core_no_pandas.py  verify_reporting_format.py
.gemini/: IMPLEMENTATION_PLAN.md  LEAD_DEVELOPER_ONBOARDING.md  NEXT_STEPS.md  QUICK_START.md  VALIDATION_PROTOCOL.md
.github/: copilot-instructions.md
analyses/: README.md
animations/: Legacy Survey Sky Browser.html  art_frb.py  frb_anim.py
batch_configs/: manifest 2.yaml
configs/: README.md  (+2 more)
(+462 files in other folders)
