[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flits"
version = "0.1.0"
description = "FRB Intensity Analysis Pipeline"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [{name = "FLITS Developers"}]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "astropy>=5.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "emcee>=3.1.0",
    "lmfit>=1.0.0",
    "chainconsumer>=0.34.0",
    "corner>=2.2.0",
    "tqdm>=4.62.0",
    "pyyaml>=5.4.0",
    "numba>=0.54.0",
    "joblib>=1.1.0",
    "scikit-image>=0.18.0",
    "uncertainties>=3.1.4",
]

[project.scripts]
flits-pipeline = "flits.scattering.run_scat_analysis:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flits*"]
